# miscellaneous_code

./: README.md  SentenceTransformer.ipynb
Assembly/: helloworld  helloworld.asm  makefile
Assembly/ip_retr/: ip_retr.asm  makefile
Assembly/strlength/: strlen  strlen.asm
C++/DSA/CompProg_Handbook/generating_permutations/: CMakeLists.txt
C++/DSA/CompProg_Handbook/generating_permutations/.cache/clangd/index/: next_perm.cpp.6F0F2BE1DEB6D76A.idx  recursion.cpp.E16653D3F1A575F1.idx
C++/DSA/CompProg_Handbook/generating_permutations/src/: next_perm.cpp  recursion.cpp
C++/DSA/SEARCH/: binarysearch.cpp  linearsearch.cpp
C++/DSA/SORT/: bubblesort.cpp
C++/RAYTRACING/: main.cpp
C/Beej_NetworkProgramming/: README.md  prepare_to_launch.c
C/Beej_NetworkProgramming/SimpleStreamServer/: client.c  server.c
C/Data_Structures_and_Algortihms/: README.md
C/Data_Structures_and_Algortihms/DNA_CODE/: singly_linked_list.c  stack.c
C/Experiments/: playing_with_libcurl.c  playing_with_structs.c  reading_files.c  wtf_is_a_pointer.c
C/Experiments/advanced_c_CharlesCabergs/: function_pointers.c
GoLang/CHALLENGES/CODE-WARS/: countingSheep.go  helloworld.go  numberToString.go  odd-int.go  reduceButGrow.go  returningString.go  stringRepeat.go  totalAmountOfPoints.go
GoLang/HELLO-WORLD/: helloworld  helloworld.go
JavaScript/CHALLENGES/LEETCODE/: ApplyTransformOverEachElementinArray.js  (+8 more)
Python/: setup-venv.txt
Python/CRYPTOGRAPHY/: brute_vig.py  detectEnglish.py  popular.txt  testing_vig.py
Python/FAST-EXCEL-RW/: fast-excel-rw.py
Python/TIC-TAC-TOE/: Tic-tac-toe.py
(+237 files in other folders)
